--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,16 +7,14 @@
   /* Tooltip text */
   .tooltip #tooltiptext {
     visibility: hidden;
-    width: 30%;
+    width: 100%;
+    height: auto;
     background-color: black;
     color: #fff;
     text-align: center;
-    padding: 5px 0;
     border-radius: 6px;
    
     /* Position the tooltip text - see examples below! */
-    left: -15%;
-    top: 50%;
   }
   
   /* Show the tooltip text when you mouse over the tooltip container */
